--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "lint-staged": "^12.3.3",
     "next": "12.0.10",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^8.8.0",
+    "eslint-config-next": "^12.0.10",
     "typescript": "4.5.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
