--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "3.9.1",
     "eslint-config-prettier": "^8.3.0",
     "lint-staged": "^12.3.3",
     "next": "12.0.10",
     "prettier": "^2.5.1",
+    "prisma": "^3.9.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
